testing/macro-tests/tests/ui/index_reserved_namespace.stderr
error: entity name '~UiIndexedEntity' uses reserved '~' namespace
  --> tests/ui/index_reserved_namespace.rs:19:12
   |
19 |     name = "~UiIndexedEntity",
   |            ^^^^^^^^^^^^^^^^^^
